openshift/svc-standalone-firefox.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: standalone-firefox
    app.kubernetes.io/component: standalone-firefox
    app.kubernetes.io/instance: standalone-firefox
    app.kubernetes.io/name: standalone-firefox
    app.openshift.io/runtime-version: latest
  name: standalone-firefox
  namespace: lx-snow
spec:
  clusterIP: 172.30.212.55
  clusterIPs:
  - 172.30.212.55
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 4444-tcp
    port: 4444
    protocol: TCP
    targetPort: 4444
  - name: 5902-tcp
    port: 5902
    protocol: TCP
    targetPort: 5902
  - name: 7900-tcp
    port: 7900
    protocol: TCP
    targetPort: 7900
  selector:
    app: standalone-firefox
    deploymentconfig: standalone-firefox
  sessionAffinity: None
  type: ClusterIP
