openshift/route-selenium-firefox-novnc.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: standalone-firefox
    app.kubernetes.io/component: standalone-firefox
    app.kubernetes.io/instance: standalone-firefox
    app.kubernetes.io/name: standalone-firefox
    app.openshift.io/runtime-version: latest
  name: selenium-firefox-novnc
  namespace: lx-snow
spec:
  host: selenium-firefox-novnc-lx-snow.apps.tools-na100.dev.ole.redhat.com
  port:
    targetPort: 7900-tcp
  to:
    kind: Service
    name: standalone-firefox
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - host: selenium-firefox-novnc-lx-snow.apps.tools-na100.dev.ole.redhat.com
    routerCanonicalHostname: router-default.apps.tools-na100.dev.ole.redhat.com
    routerName: default
    wildcardPolicy: None
